--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: metaSEM
 Type: Package
 Title: Meta-Analysis using Structural Equation Modeling
-Version: 0.9-1
-Date: 2014-12-22
+Version: 0.9-2
+Date: 2015-01-16
 Depends: R (>= 3.1.0), OpenMx (>= 2.0.0)
 Imports: Matrix, MASS
 Suggests: metafor, semPlot
@@ -17,4 +17,5 @@ LazyLoad: yes
 LazyData: yes
 ByteCompile: yes
 URL: http://courses.nus.edu.sg/course/psycwlm/Internet/metaSEM/
-Packaged: 2014-12-22 10:51:03 UTC; mikewlcheung
+Packaged: 2015-01-28 14:01:25 UTC; mikewlcheung
+Built: R 3.1.2; ; 2015-04-01 15:05:38 UTC; unix
