--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: metaSEM
 Type: Package
 Title: Meta-Analysis using Structural Equation Modeling
-Version: 0.9.5-2
-Date: 2015-09-17
-Depends: R (>= 3.2.0), OpenMx (>= 2.2.4)  
-Imports: Matrix, MASS
-Suggests: metafor, semPlot
+Version: 0.9.8
+Date: 2016-04-16
+Depends: R (>= 3.2.2), OpenMx (>= 2.3.1)  
+Imports: Matrix, MASS, ellipse, graphics, stats, utils
+Suggests: metafor, semPlot, lavaan
 Author: Mike W.-L. Cheung <mikewlcheung@nus.edu.sg>
 Maintainer: Mike W.-L. Cheung <mikewlcheung@nus.edu.sg>
 Description: A collection of functions for conducting meta-analysis using a
